--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,7 @@ function renderGangChat(gangName) {
 
 </script>
 
+<script>
 // === PART 9: Malware stealth, screen peeking, map and pinging, UI polish ===
 
 // Malware stealth system
@@ -1486,3 +1487,4 @@ document.addEventListener('DOMContentLoaded', () => {
   renderScreenPeek(exampleServer);
 });
 
+</script>
